--- a/Kaiserreich Korean Translation/localisation/KR_Princely_Federation_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Princely_Federation_l_english.yml
@@ -30,8 +30,8 @@ PRF_baroda_forces:0 "Baroda's princely forces will join the war!\n"
 PRF_orissa_forces:0 "Rebels forces in Orissa will join the war!\n"
 
 ### Parties ###
-PRF_totalist_party:0 "맥시미스트"
-PRF_totalist_party_long:0 "맥시미스트"
+PRF_totalist_party:0 "최대주의자"
+PRF_totalist_party_long:0 "최대주의자"
 PRF_syndicalist_party:0 "생디칼리스트"
 PRF_syndicalist_party_long:0 "생디칼리스트"
 PRF_radical_socialist_party:0 "농민"
@@ -48,8 +48,8 @@ PRF_authoritarian_democrat_party:0 "토후 회의"
 PRF_authoritarian_democrat_party_long:0 "토후 회의"
 PRF_paternal_autocrat_party:0 "토후 회의"
 PRF_paternal_autocrat_party_long:0 "토후 회의"
-PRF_national_populist_party:0 "Ittehad-ul Muslimeen"
-PRF_national_populist_party_long:0 "Ittehad-ul Muslimeen"
+PRF_national_populist_party:0 "이슬람교 연맹"
+PRF_national_populist_party_long:0 "이슬람교 연맹"
 
 ### Ideas ###
 PRF_rule_of_princes_1:0 "Decentralised Rule"
@@ -60,9 +60,9 @@ PRF_rule_of_princes_3:0 "Rebellious Princes"
 PRF_rule_of_princes_3_desc:0 "The Princely Federation is a decentralised nation, with a great deal of power in the hands of the various Princely States - and they are displeased with their ruler, and talking open rebellion."
 PRF_popular_nizam:0 "Father of the Confederation"
 PRF_popular_nizam_desc:0 "The Nizam of Hyderabad, while an autocrat who holds sole political power in the nation, is a popular ruler who has enacted a number of reforms to benefit the people."
-PRF_backwards_economy_1:0 "Backwards Economy"
+PRF_backwards_economy_1:0 "퇴보한 경제"
 PRF_backwards_economy_1_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated."
-PRF_backwards_economy_2:0 "Backwards Economy"
+PRF_backwards_economy_2:0 "퇴보한 경제"
 PRF_backwards_economy_2_desc:0 "The nation is largely agrarian in nature, with many of its agricultural methods long outdated. Things have slowly started to change, however, with industrialisation becoming more common in urban areas."
 PRF_centralized_command_1:0 "Centralised Command"
 PRF_centralized_command_1_desc:0 "Command of the armed forces is slowly being taken away from the Princely States and placed firmly in the hands of a centralised authority."
