--- a/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
@@ -37,7 +37,7 @@ LEC_cigarettes_desc:0 "Our own brand of 'Legitimate Cigarettes' is proving to be
 LEC_gates_of_china:0 "중국으로부터 오는 수익"
 LEC_gates_of_china_desc:0 "우리가 많은 주요 무역 중심지를 통제하고 있으며 막대한 양의 무역이 우리 땅을 거쳐가기 때문에, 우리는 자연스럽게 수익을 취할 수 있습니다."
 LEC_paying_out:0 "권한의 대가"
-LEC_paying_out_desc:0 "권한의 일환으로 우리는 협의회의 많은 구성원들에게 돈을 지불해야 합니다."
+LEC_paying_out_desc:0 "권한의 일환으로 우리는 협의회의 많은 구성원들에게 보상금을 지불해야 합니다."
 
 ### Parties ###
 LEC_totalist_party:0 "상하이 전체주의당"
@@ -62,28 +62,28 @@ LEC_national_populist_party:0 "국가위임통치"
 LEC_national_populist_party_long:0 "정착촌과 공사관 권리를 위한 국가위임통치"
 
 ### Opinion Modifiers ###
-LEC_member:0 "공사관 도시 협의회의 회원"
-LEC_TRIAD_POWER:0 "Triads in Power"
-LEC_TRIAD_POWER_GER:0 "Triads in Power"
-LEC_TRIAD_POWER_YUN:0 "Triads in Power"
-LEC_TARIFF:0 "Legation Cities Tariffs"
+LEC_member:0 "공사관 도시 협의회의 회원국"
+LEC_TRIAD_POWER:0 "권력을 장악한 삼합회"
+LEC_TRIAD_POWER_GER:0 "권력을 장악한 삼합회"
+LEC_TRIAD_POWER_YUN:0 "권력을 장악한 삼합회"
+LEC_TARIFF:0 "공사관 도시 관세"
 LEC_CLEAN_POWER:0 "Legation Cities wipe the Slate clean"
 LEC_CLEAN_POWER_GER:0 "Legation Cities wipe the Slate clean"
 LEC_CLEAN_POWER_YUN:0 "Legation Cities wipe the Slate clean"
 LEC_MASSACRE:0 "'Big Ears' Massacre"
 LEC_MASSACRE_ENT:0 "'Big Ears' Massacre"
 LEC_MASSACRE_USA:0 "'Big Ears' Massacre"
-AOG_CONTROL_BORDERS:0 "A.O.G. tightens her borders"
-AOG_CONTROL_BORDERS_YUN:0 "A.O.G. tightens her borders"
-AOG_TRIAD_NOTHING:0 "A.O.G. did nothing"
-LEC_REM_THEIR_POERTS:0 "Legation Cities Remain in their Ports"
-LEC_SOUTH_PORTS:0 "Legation Cities claim our Ports"
-AUS_GIVE_PORTS:0 "A.O.G. has ceded her southern Ports"
-AUS_WAR_LEC:0 "A.O.G. declares war on the Legation Cities"
-AUS_WAR_LEC_YUN:0 "A.O.G. declares war on the Legation Cities"
-AUS_WAR_LEC_FOR:0 "A.O.G. declares war on the Legation Cities"
-AUS_ANN_LEC:0 "A.O.G. annexes the Legation Cities"
-AUS_RUN_LEC:0 "A.O.G. let the Legation Cities run"
+AOG_CONTROL_BORDERS:0 "총 동아시아 회사가 국경 방비를 강화하다"
+AOG_CONTROL_BORDERS_YUN:0 "총 동아시아 회사가 국경 방비를 강화하다"
+AOG_TRIAD_NOTHING:0 "총 동아시아 회사는 아무 것도 하지 않았다"
+LEC_REM_THEIR_POERTS:0 "공사관 도시가 그들의 항구에 남다"
+LEC_SOUTH_PORTS:0 "공사관 도시가 우리 항구의 영유권을 주장하다"
+AUS_GIVE_PORTS:0 "총 동아시아 회사가 남부 항구도시를 할양하다"
+AUS_WAR_LEC:0 "총 동아시아 회사가 공사관 도시에 선전포고하다"
+AUS_WAR_LEC_YUN:0 "총 동아시아 회사가 공사관 도시에 선전포고하다"
+AUS_WAR_LEC_FOR:0 "총 동아시아 회사가 공사관 도시에 선전포고하다"
+AUS_ANN_LEC:0 "총 동아시아 회사가 공사관 도시를 합병하다"
+AUS_RUN_LEC:0 "총 동아시아 회사가 공사관 도시를 그대로 두다"
 Tokyo_Conference_USA:0 "도쿄 회담"
 Tokyo_Conference_AST:0 "도쿄 회담"
 Tokyo_Conference_QIE:0 "도쿄 회담"
@@ -109,14 +109,14 @@ LEC_stop_mandate_maybe:0 "§RWe create our own Mandate. Be warned that this can 
 LEC_Expanded_Force_tt:0 "We will expand the Police Force and mobilise new units.\n"
 
 ### Focuses ###
-LEC_shanghai:0 "상하이로의 투쟁"
+LEC_shanghai:0 "상하이에서의 투쟁"
 LEC_shanghai_desc:0 "공사관 도시들은 언제나 무법 지대였지만, 최근 세계 경제의 침체는 여기에 한 술 더 떠서 상황을 악화시키고 있습니다. 동아시아 회사 영토로부터의 밀수가 급증했고 공사관 의회는 몇 개월 동안이나 공무원들에게 봉급을 지불할 수 없었습니다. 우리는 항상 음지의 범죄 조직들과 협력할 필요가 있었지만, 실질적으로 그들은 우리 정부보다도 더 강한 권력을 행사하고 있는 것 같습니다..."
-LEC_man1:0 "권력 장악"
+LEC_man1:0 "권력 장악하기"
 LEC_man1_desc:0 "우리는 지난 몇 개월 동안 아득한 고통을 견뎌냈고, 타격을 입긴 했지만 여전히 권력을 잡고 있습니다. 우리는 즉시 우리의 위치를 확고히 하기 위해 노력해야만 합니다."
-LEC_man2:0 "우리의 위치를 확고히 하다"
+LEC_man2:0 "권력 굳히기"
 LEC_man2_desc:0 "우리는 우리의 권좌를 굳건히 하고 유명한 무법자들을 감옥에 넣어버리기 위한 조치를 취해야 하며, 49인회는 그 좋은 시작이 될 것입니다."
-LEC_man3:0 "해외 자산 확보"
-LEC_man3_desc:0 "우리는 해외의 우리 지지자들에게 곤경에 처한 경제를 개혁하기 위한 재건 작업에 이용할 추가적인 자산들을 제공해 줄 것을 요청해야 합니다."
+LEC_man3:0 "해외 투자 확보"
+LEC_man3_desc:0 "우리는 해외의 우리 지지자들에게 곤경에 처한 경제를 개혁하기 위한 재건 작업에 이용할 추가적인 투자들을 제공해 줄 것을 요청해야 합니다."
 LEC_man4:0 "독일의 공학"
 LEC_man4_desc:0 "독일은 그 요청에 응했고 우리가 소유한 산업을 현대화하는 것을 돕기 위해 몇몇 최고의 기술자들을 우리에게 제공해 주었습니다."
 LEC_man5:0 "캐나다의 건축"
@@ -133,31 +133,31 @@ LEC_comm1:0 "위원장이 권력을 확보하다"
 LEC_comm1_desc:0 "공사관 위원회의 창설 이후 전례 없는 이 위기 동안 우리의 위원회 통치는 중지되었으며, 위원장이 전체 평의회의 대리인으로서 통치를 하기로 결정되었습니다."
 LEC_comm2:0 "행정명령법"
 LEC_comm2_desc:0 "이제 우리가 공사관 위원회를 장악했으니 우리는 우리의 권력 기반을 공고히 해야 합니다. 행정명령에 의해 통치할 수 있게 되면 우리는 도시의 삼합회 그리고 반체제 인사들을 무너뜨리는 데 필요한 모든 권력에 접근할 수 있게 될 것입니다."
-LEC_comm3:0 "Public Gatherings Outlawed"
+LEC_comm3:0 "공공집회 불법화"
 LEC_comm3_desc:0 "Public gatherings are breeding grounds for Triad activities and dissident subversion. If we do not outlaw them resistance to our rule will harden."
-LEC_comm4:0 "Incorporation of the Firms"
+LEC_comm4:0 "기업 통폐합"
 LEC_comm4_desc:0 "It has been decided that pull ourselves out of this serious economic slump we should nationalise all private firms and put them under our stewardship. Of course this will only be for the duration of the current crisis..."
-LEC_comm5:0 "Dissolve the Legation Council"
+LEC_comm5:0 "공사관 협의회 해산"
 LEC_comm5_desc:0 "The mandatory countries have agreed that further powers must be granted to the sole leader of the Legation Council, meaning the effective dissolution the Council until the crisis facing the Cities is over."
-LEC_comm6:0 "Autocratic Rule"
+LEC_comm6:0 "독재 정권"
 LEC_comm6_desc:0 "Think how much we can accomplish if we don't have to worry about petty frivolities such as human rights and democracy. We can bring great boons to all citizens if they fall into line."
-LEC_comm7:0 "Reforging the Economy"
+LEC_comm7:0 "경제를 재련하다"
 LEC_comm7_desc:0 "Now that we have a firm grip on power we can finally rid our country of perverted dissident influences and the economic malaise that has warped our cities. A new economic model will inevitably bring us back to prosperity."
-LEC_triad1:0 "Night of the Monkey's Head"
+LEC_triad1:0 "원숭이들의 밤"
 LEC_triad1_desc:0 "Big Ears Du has taken advantage of the economic difficulties in Shanghai and the other Legation Ports to become undisputed master of the extensive criminal networks criss-crossing the autonomous cities. Despite this, total political control has thus far escaped him. He consults his soothsayer to see what the omens have in store for him..."
-LEC_triad2:0 "The Syndicates Split"
+LEC_triad2:0 "신디케이트 해산"
 LEC_triad2_desc:0 "After the stunning massacres of the Night of the Monkey's Head. The Triads are now in de-facto sole control of the Legation Cities and now must decide between them who should be the Dragon Head."
-LEC_triad3:0 "Reinvest our Profits"
+LEC_triad3:0 "수익 재투자"
 LEC_triad3_desc:0 "We have now made more than enough capital from our illicit ventures to rid the cities of irritating corruption (that is unconnected to us) and encourage foreign capital to return under our "protection"."
-LEC_qing1:0 "Jiang Qing"
+LEC_qing1:0 "장칭"
 LEC_qing1_desc:0 "Jiang Qing might not seem a likely Dragon Head at only 22 years of age but she has had a meteoric rise within the United Triads. Her dominance over mass-scale opium production and collaboration with foreign growers and markets gives us a bizarrely viable method by which to strengthen the weakened economy, a weakness we both created and inherited..."
-LEC_qing2:0 "Focus on Opium"
+LEC_qing2:0 "아편에 집중"
 LEC_qing2_desc:0 "With the rule of Jiang Qing cemented she now turns her attention to implementing her Opium-based agenda. Triad liquidity has been plowed into Opium farms and improving supply chains in order to boost local production."
-LEC_qing3:0 "Afghan Opium"
+LEC_qing3:0 "아프가니스탄의 아편"
 LEC_qing3_desc:0 "In the past our Opium has directly competed with Afghan product. Jiang Qing has decided that by co-operating with these growers we can increase our supply while bringing more profit to the Afghan growers - making it an obvious win-win for all involved."
-LEC_qing4:0 "Bengali Opium"
+LEC_qing4:0 "벵갈의 아편"
 LEC_qing4_desc:0 "After our profitable partnership with the Afghan growers we should now seek to expand to the lucrative Bengali Market. with the Syndicalist regime overshadowing growers they face a lack of foreign capital and heavy risks to both production and sale. If we step to support them we can incorporate another rival and increase our market share."
-LEC_tu1:0 "Tu Yueh Sen"
+LEC_tu1:0 "뚜위에센"
 LEC_tu1_desc:0 "Unsurprisingly 'Big Ears Du' is widely seen as the safest and most likely choice for Dragon Head. After all it is thanks to his efforts that the Triads now dominate the cities virtually unopposed. He promises a traditional platform of arms smuggling, counterfeiting and racketeering to bring the economy some sense of order."
 LEC_tu2:0 "Increase the Arms Trade"
 LEC_tu2_desc:0 "With the upsurge in armed conflicts across the globe we must increase the amount and quality of arms that we smuggle and sell to the various war-torn nations. The more bloodshed, the more we profit. After all if they did not buy it from us, they would just go elsewhere!"
@@ -165,7 +165,7 @@ LEC_tu3:0 "Protection Rackets"
 LEC_tu3_desc:0 "The Cities are a violent and dangerous place as we well know. We should make sure that all businesses are aware of our new "protection" policies and that they sign up to them immediately. It isn't tribute, it is protection money."
 LEC_tu4:0 "Cigarette Counterfeiting"
 LEC_tu4_desc:0 "It's important that we maintain if not increase smuggling of Golden Dragon cigarettes into the AOG and Qing territories. We must continue to do so even if we do not actually have the stocks needed to maintain such supply. Who would know if a few cutbacks are made..."
-LEC_jinrong1:0 "Huang Jinrong"
+LEC_jinrong1:0 "황진롱"
 LEC_jinrong1_desc:0 "Huang Jinrong has been a fixture of Hong Kong for many years with many ties to legitimate and illegitimate ventures. He advocates a focus on exploiting the vices that we provide and sponsor and to take a greater share of the profits from them."
 LEC_jinrong2:0 "Strengthen our Smugglers"
 LEC_jinrong2_desc:0 "For too long we have left our smugglers with only the minimum support that we could provide under the Mandate Authorities. Now that we are in charge of the Cities we can fully sponsor their efforts."
