--- a/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Legation_Cities_l_english.yml
@@ -73,17 +73,17 @@ LEC_CLEAN_POWER_YUN:0 "Legation Cities wipe the Slate clean"
 LEC_MASSACRE:0 "'Big Ears' Massacre"
 LEC_MASSACRE_ENT:0 "'Big Ears' Massacre"
 LEC_MASSACRE_USA:0 "'Big Ears' Massacre"
-AOG_CONTROL_BORDERS:0 "총 동아시아 회사가 국경 방비를 강화하다"
-AOG_CONTROL_BORDERS_YUN:0 "총 동아시아 회사가 국경 방비를 강화하다"
-AOG_TRIAD_NOTHING:0 "총 동아시아 회사는 아무 것도 하지 않았다"
+AOG_CONTROL_BORDERS:0 "일반 동아시아 회사가 국경 방비를 강화하다"
+AOG_CONTROL_BORDERS_YUN:0 "일반 동아시아 회사가 국경 방비를 강화하다"
+AOG_TRIAD_NOTHING:0 "일반 동아시아 회사는 아무 것도 하지 않았다"
 LEC_REM_THEIR_POERTS:0 "공사관 도시가 그들의 항구에 남다"
 LEC_SOUTH_PORTS:0 "공사관 도시가 우리 항구의 영유권을 주장하다"
-AUS_GIVE_PORTS:0 "총 동아시아 회사가 남부 항구도시를 할양하다"
-AUS_WAR_LEC:0 "총 동아시아 회사가 공사관 도시에 선전포고하다"
-AUS_WAR_LEC_YUN:0 "총 동아시아 회사가 공사관 도시에 선전포고하다"
-AUS_WAR_LEC_FOR:0 "총 동아시아 회사가 공사관 도시에 선전포고하다"
-AUS_ANN_LEC:0 "총 동아시아 회사가 공사관 도시를 합병하다"
-AUS_RUN_LEC:0 "총 동아시아 회사가 공사관 도시를 그대로 두다"
+AUS_GIVE_PORTS:0 "일반 동아시아 회사가 남부 항구도시를 할양하다"
+AUS_WAR_LEC:0 "일반 동아시아 회사가 공사관 도시에 선전포고하다"
+AUS_WAR_LEC_YUN:0 "일반 동아시아 회사가 공사관 도시에 선전포고하다"
+AUS_WAR_LEC_FOR:0 "일반 동아시아 회사가 공사관 도시에 선전포고하다"
+AUS_ANN_LEC:0 "일반 동아시아 회사가 공사관 도시를 합병하다"
+AUS_RUN_LEC:0 "일반 동아시아 회사가 공사관 도시를 그대로 두다"
 Tokyo_Conference_USA:0 "도쿄 회담"
 Tokyo_Conference_AST:0 "도쿄 회담"
 Tokyo_Conference_QIE:0 "도쿄 회담"
@@ -179,7 +179,7 @@ LEC_defp1:0 "Expand the Police Force"
 LEC_defp1_desc:0 "We have decided to expand our current standing police force. Cash incentives and social benefits will now be offered to all willing recruits, and we will now also accept women into the force."
 LEC_defp2:0 "Increase Patrols"
 LEC_defp2_desc:0 "We must increase the presence of our Police Force within the cities. Without a powerful display of our disciplined force the Blue Lanterns and dissidents will think they are free to do what they like. This is certainly not the case."
-LEC_defp3:0 "Militarise the Force"
+LEC_defp3:0 "군을 무장시켜라"
 LEC_defp3_desc:0 "The menace posed to our stability by outside threats and internal vermin is too great to ignore. We must start to organise and militarise our police force to create de facto army units straight away."
 LEC_deft1:0 "Incorporate the 49er's"
 LEC_deft1_desc:0 "With our rule of the Cities now firmly in place we must seek to build a new defence force outside of the limited police detachments. As a start we should incorporate the 49er's as the basis for these military units."
