--- a/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Victory_Points_l_english.yml
@@ -521,7 +521,7 @@ VICTORY_POINTS_7087:0 "시즈오카"
 VICTORY_POINTS_7097:0 "창샤"
 VICTORY_POINTS_7101:0 "창더"
 VICTORY_POINTS_7109:0 "바오딩"
-VICTORY_POINTS_7125:0 "경성" #서울/경성
+VICTORY_POINTS_7125:0 "케이조" #서울/경성
 VICTORY_POINTS_7132:0 "오랑"
 VICTORY_POINTS_7137:0 "난닝"
 VICTORY_POINTS_7138:0 "샬럿"
@@ -1116,7 +1116,7 @@ VICTORY_POINTS_13551:0 "잔지바르스타드"
 VICTORY_POINTS_13575:0 "그라츠"
 VICTORY_POINTS_13601:0 "누크"
 VICTORY_POINTS_13604:0 "몬로비아"
-VICTORY_POINTS_13631:0 "스카파 플로우"
+VICTORY_POINTS_13631:0 "스캐퍼플로"
 VICTORY_POINTS_13641:0 "은고마"
 VICTORY_POINTS_13648:0 "몽구"
 VICTORY_POINTS_13659:0 "브뤼허"
