--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -91,7 +91,7 @@ worldnews.20.a:0 "골치 아프군."
 
 worldnews.21.t:0 "휴이 롱이 미국 대통령으로 선출되다"
 worldnews.21.d:0 "1925년 대공황 이래 미국 전역에 만연한 큰 혼란에도 불구하고 대통령 선거가 진행되어 투표 결과가 발표되었습니다. 미국 제일당의 휴이 롱이 미국의 32대 대통령이 되었습니다. \n\n휴이 롱은 루이지애나에서 성공한 주지사로 유명하지만, 대중주의 정책과 정치인들과 싸우기 위한 준 군사적인 민병대의 사용에 대해 많은 비판을 받았습니다. 아메리카 노동 연맹은 롱이 선거 결과를 조작했다고 주장하면서 선거 결과에 대해서 이의를 제기하고 있습니다."
-worldnews.21.a:0 "남부 촌놈이 대통령으로서 무엇을 할 수 있을지 보자."
+worldnews.21.a:0 "남부인이 대통령으로서 무엇을 할 수 있을지 보자."
 
 worldnews.22.t:0 "잭 리드가 미국 대통령으로 선출되다"
 worldnews.22.d:0 "1925년 대공황 이래 미국 전역에 만연한 큰 혼란에도 불구하고 대통령 선거가 진행되어 투표 결과가 발표되었습니다. 아메리카 노동 연맹의 잭 리드가 미국의 32대 대통령이 되었습니다. \n\n잭 리드는 생디칼리즘의 지지자로, 러시아에서 지낼동안 유능한 정치인이 되었습니다. 이런 태도로 인해 미국 사회에서 많은 적을 만들었지만 그가 이끌고있는 노동 연맹은 여전히 강합니다. 미국 제일당은 이미 선거 결과에 이의를 제기하고는 있습니다..."
@@ -304,9 +304,9 @@ worldnews.69.a:0 "성 베드로 성당의 새 주인이 생겼군."
 
 worldnews.70.t:0 "이탈리아 선거"
 worldnews.70.d.sli:0 "이탈리아 공화국에서의 선거는 이바노에 보노미 수상이 그의 자리를 지켜내면서 끝이 났습니다. 검은 월요일 위기를 이유로 조기 선거를 실시한 그의 도박은 어느 정도 성공적이었습니다."
-worldnews.70.d.mli:0 "이탈리아 공화국에서의 선거는 이탈리아 자유당의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
-worldnews.70.d.sco:0 "이탈리아 공화국에서의 선거는 이탈리아 민중당의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
-worldnews.70.d.npo:0 "이탈리아 공화국에서의 선거는 이탈리아 민족주의 연맹의 대표인 [ITA.GetLeader]가 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 수상으로 임명된 즉시 본인의 칭호를 자칭 이탈리아의 지도자로서 가장 적합한 칭호라고 주장하는 일-두체로 바꾸었고, 밀라노에서의 연설에서 그는 그 무엇도 이탈리아의 위대함을 가로막을 수 없으며, 현재 이탈리아를 잠식하고 있는 검은 월요일 위기는 새로운 이탈리아의 군홧발에 곧 짓밟힐 오스트리아의 사악한 영향 때문이라고 주장했습니다."
+worldnews.70.d.mli:0 "이탈리아 공화국에서의 선거는 이탈리아 자유당의 대표인 [ITA.GetLeader]이(가) 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
+worldnews.70.d.sco:0 "이탈리아 공화국에서의 선거는 이탈리아 민중당의 대표인 [ITA.GetLeader]이(가) 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 그가 이탈리아에 퍼진 검은 월요일 위기의 여파를 해결해줄 수 있으리라는 대중들의 기대를 한 몸에 받고 있습니다. 어쨌든 검은 월요일 위기를 이용한 이바노에 보노미 수상의 권력 강화 시도는 명백히 실패했습니다."
+worldnews.70.d.npo:0 "이탈리아 공화국에서의 선거는 이탈리아 민족 연합의 대표인 [ITA.GetLeader]이(가) 수상으로 선출되면서 끝이 났습니다. 새로운 수상은 수상으로 임명된 즉시 본인의 칭호를 자칭 이탈리아의 지도자로서 가장 적합한 칭호라고 주장하는 일-두체로 바꾸었고, 밀라노에서의 연설에서 그는 그 무엇도 이탈리아의 위대함을 가로막을 수 없으며, 현재 이탈리아를 잠식하고 있는 검은 월요일 위기는 새로운 이탈리아의 군홧발에 곧 짓밟힐 오스트리아의 사악한 영향 때문이라고 주장했습니다."
 worldnews.70.a:0 "흥미롭군."
 
 worldnews.71.t:0 "[From.GetNameDef]에서의 혁명!"
