--- a/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Argentina_l_english.yml
@@ -712,9 +712,9 @@ argfor.12.c:0 "미국 시민들을 위해 국경을 봉쇄하라"
  
 argfor.13.t:0 "리오 네그로에서의 승리!"
 argfor.13.d:0 "현재 북부 정부는 최근 아르헨티나군과 FOP민병대 간의 국경 긴장이 고조된 후 우리가 강에서 철수할 것을 요구하고 있습니다. 비록 우리가 그 투쟁에서 어떠한 영토적 양보도 얻지 못했을지라도, 우리 국민들은 적들이 완전한 침략에 준비가 되어 있지 않다는 것을 깨닫게 되면서 그 행동은 우리의 사기에 큰 힘을 증가시켰습니다."
-argfor.13.a:0 "마지막 승리를 향해 나아간다!" 
+argfor.13.a:0 "마지막 승리를 향해 나아간다!"
  
-argfor.14.t:0 "아르헨티나의 '보호' 제공" 
+argfor.14.t:0 "아르헨티나의 '보호' 제공"
 argfor.14.d:0 "적절한 기회를 기다리며 죽어 가는 먹이 위에 독수리가 원을 그리듯 아르헨티나는 브라질이 주요한 이념적 변화를 겪는 것을 예의 주시해 왔습니다. 더 이상 우리를 보호하기에 적합하지 않고 심지어 우리를 먼저 공격하고 우리의 자랑스러운 국가를 다시 통합하는 것조차 고려하지 않은 채 브라질은 너무 위험해 졌습니다. 따라서 아르헨티나는 그들로 인해 야기될 어떠한 피해로부터도 우리를 보호할 것을 제안했습니다...대가를 치뤄서"
 argfor.14.a:0 "우리는 다른 방법이 없다"
 argfor.14.b:0 "우리는 우리 자신을 방어할 수 있다"
@@ -727,7 +727,7 @@ argfor.15.b:0 "'보호'를 강요한다"
 argfor.16.t:0 "아르헨티나의 군사 쿠데타!"
 argfor.16.d:0 "계속되는 FOP위기 해결의 주저함은 군부가 국가를 장악하기 위해 단결함에 따라 다시 한번 국가를 혼란에 빠뜨리고 있습니다. 부에노스 아이레스, 코르도바와 전국의 여러 도시들에서 격렬한 투쟁이 계속되고 있지만 우리 정부가 또 다시 무너진 것 같습니다. 강력하고 직접적인 지도력에 대한 그들의 약속을 이행하기 위해, 새로운 군사 정부는 즉시 FOP에 위기를 완전히 끝내기 위한 전쟁을 선포했습니다."
 argfor.16.a:0 "안 돼!"
- 
+
 ## Immigration ##
 argim.1.t:0 "1936년 이민 보고서"
 argim.1.d:0 "검은 월요일 참사의 여파로 세계 경제가 붕괴되고 유럽 전역에 긴장감이 고조됨에 따라, 수많은 이민자들이 연못을 넘어 우리 나라에서 그들의 운명을 개척하기로 결정했습니다. 미국이 서서히 혼란에 빠져 가는 가운데, 이들 이민자들 중 많은 사람들이 미국 헌법에 따라 우리나라를 그들의 주 목적지로 선택한 것은 놀랄 일이 아닙니다."
@@ -799,7 +799,7 @@ argbla.6.a:0 "제안서 보내기"
 argbla.7.t:0 "아르헨티나 무역 대표"
 argbla.7.d:0 "우리의 최대 수입국 중 하나인 아르헨티나 공화국은 우리가 중앙유럽 국가들에 대해 부과한 관세 인상에 대해 예외를 요구하며 무역 부처 본부에 손을 내밀었습니다. 그들의 경제가 사실상 전적으로 우리에게 의존하고 있기 때문에, 우리는 그들을 압박하고 그들이 덜 유리한 협정에 서명하도록 강요할 수 있습니다.\n\n그러나 그들이 이 기회를 이용하여 자신들의 이익을 협상국으로 바꾸게 된다면, 아메리카 대륙의 경쟁자들에게 유리한 기회를 줄 수 있도록 그들의 중요한 농산물 수출에서 우리를 제외시킬 것입니다."
 argbla.7.a:0 "우리는 그들의 충성심이 필요해!"
-argbla.7.b:0 "친구들에겐 몇 라이히마르크의 여유가 있나?"
+argbla.7.b:0 "친구들에겐 몇 마르크의 여유가 있나?"
 
 argbla.71.t:0 "독일은 우리의 조건에 동의한다"
 argbla.71.d:0 "그것이 자비심에서 온 것이든 아니면 남미 대륙에 대한 그들의 영향력을 확대하고자 하는 욕구에서 비롯된 것이든, 독일은 우리의 조건에 적극적으로 동의했고, 아르헨티나 제품에 대한 예외를 검은 월요일 무역 협정에 만들었습니다."
@@ -1062,16 +1062,16 @@ argcar.44.a:0 "선거는 두달 후에 치러질 예정입니다!"
 argcar.45.t:0 "[GetYear] 아르헨티나 공화국 선거"
 argcar.45.d:0 "대규모 파업과 시위, 그리고 페론의 엄청난 투옥이 끝나고 드디어 선거일이 다가왔습니다. 노동조합에서 그의 동료들과 함께한 페론은 민주 동맹에 반대하는 세 개의 새로운 정당을 조직했습니다. 아르투로 폰디지, 로베르토 오르티스, 리카르도 발빈, 알리시아 모로 드 후스토는 페론에 대항해 연합했지만 여전히 그들 자신의 귀중한 대통령직을 주장하고 있습니다. 투표소 밖에서 페론주의자들과 반 페론주의자들 사이에 작은 충돌이 일어났지만 모두를 위한 자유 선거 과정으로 유지하라는 임무를 맡은 경찰에 의해 빠르게 중재 받았습니다."
 argcar.45.a:0 "페론이 대통령이 되다"
-argcar.45.b:0 "아르투로 폰디지가 대통령이 되다"
-argcar.45.c:0 "로베르토 오르티스가 대통령이 되다"
-argcar.45.e:0 "리카르도 발빈이 대통령이 되다"
+argcar.45.b:0 "Elpidio Gonzalez가 대통령이 되다"
+argcar.45.c:0 "Jose Pascual Tamborini가 대통령이 되다"
+argcar.45.e:0 "Robustiano Patron Costas가 되다"
 argcar.45.f:0 "알리시아 모로 드 후스토가 대통령이 되다"
 
 argcar.46.t:0 "[GetYear] 아르헨티나 공화국 선거"
 argcar.46.d:0 "페론주의자들의 힘이 대부분 부서지고 페론이 섬의 감옥에서 썩어 가면서 선거는 그의 운동을 대표하지 않고 진행되었습니다. 여러 후보들이 입후보해서 접전이 될 전망입니다."
 argcar.46.a:0 "아르투로 폰디지가 대통령이 되다"
-argcar.46.b:0 "로베르토 오르티스가 대통령이 되다"
-argcar.46.c:0 "리카르도 발빈이 대통령이 되다"
+argcar.46.b:0 "Jose P. Tamborini가 되다"
+argcar.46.c:0 "Robustiano P. Costas가 대통령이 되다"
 argcar.46.e:0 "알리시아 모로 드 후스토가 대통령이 되다"
 
 argcar.47.t:0 "마누엘 카를레스의 죽음!"
@@ -1104,24 +1104,24 @@ argdem.5.a:0 "라미레즈 만세"
 argdem.6.t:0 "아르헨티나의 선거일"
 argdem.6.d:0 "부에노스 아이레스에서 군사 정권이 들어선 이후 처음으로 실시된 자유 선거로 긴장감이 고조되고 있습니다. 모든 정당들이 투표를 잘 하고 있지만 세 가지의 주요 경쟁자들로는 급진시민연합, 반개인주의적 급진시민연합 그리고 민주국민당이 눈에 띕니다. 마지막 부스가 문을 닫고, 결과가 들어오기 시작하고, 승리는..."
 argdem.6.a:0 "마르셀로 T. 드 알베아르"
-argdem.6.b:0 "호세 파스칼 타보리니"
-argdem.6.c:0 "로버스티아노 패트론 코스타스"
+argdem.6.b:0 "Roberto Marcelino Ortiz"
+argdem.6.c:0 "Ramón Antonio Castillo"
 
 argdem.7.t:0 "아르헨티나의 선거일"
 argdem.7.d:0 "페론주의자들의 강력한 추진력으로 이번 선거에서 민주 동맹과 도밍고 페론의 대통령직 사이의 접전을 만들었습니다. 최근 몇 년간의 노동조합의 지지와 노동자 계층의 불만 증가로 그는 인기를 얻으며 당에서 대통령직으로 선출되었습니다. 하지만 많은 사람들은 페론과 군대가 연계되면 군사 정부와 라미레즈 시대가 다시 일어날 것을 우려하고 있습니다."
 argdem.7.a:0 "페론이 대통령이 되다"
-argdem.7.b:0 "아르투로 폰디지가 대통령이 되다"
-argdem.7.c:0 "로베르토 오르티스가 대통령이 되다"
-argdem.7.e:0 "리카르도 발빈이 대통령이 되다"
-argdem.7.f:0 "알리시아 모로 드 후스토가 대통령이 되다"
+argdem.7.b:0 "Elpidio Gonzalez가 대통령이 되다"
+argdem.7.c:0 "José Pascual Tamborini가 대통령이 되다"
+argdem.7.e:0 "Robustiano Patron Costas가 대통령이 되다"
+argdem.7.f:0 "Nicolas Repetto가 대통령이 되다"
 
 argdem.71.t:0 "아르헨티나의 선거일"
 argdem.71.d:0 "페론주의자들의 강력한 추진력으로 이번 선거에서 민주 동맹과 도밍고 페론의 대통령직 사이의 접전을 만들었습니다. 최근 몇 년간의 노동조합의 지지와 노동자 계층의 불만 증가로 그는 인기를 얻으며 당에서 대통령직으로 선출되었습니다. 하지만 많은 사람들은 페론과 군대가 연계되면 군사 정부와 라미레즈 시대가 다시 일어날 것을 우려하고 있습니다."
 argdem.71.a:0 "페론이 대통령이 되다"
 argdem.71.b:0 "아르투로 폰디지가 대통령이 되다"
-argdem.71.c:0 "엘피도 곤잘레스가 대통령이 되다"
+argdem.71.c:0 "José Pascual Tamborini가 대통령이 되다"
 argdem.71.e:0 "리카르도 발빈이 대통령이 되다"
-argdem.71.f:0 "알리시아 모로 드 후스토가 대통령이 되다"
+argdem.71.f:0 "알리시 모로 드 후스토가 대통령이 되다"
 
 argdem.8.t:0 "FOP와 협상"
 argdem.8.d:0 "FOP의 실패를 더 이상의 유혈 사태 없이 그리고 국민들의 권한으로 해결하기 위해, 아르헨티나 정부는 반란 지역을 평화적으로 다시 통합할 계획을 세웠습니다. 반군에 대한 양보는 해야 하겠지만 부에노스 아이레스 정부는 남부 반군도 적대 행위를 종식시킬 의사가 있다고 확신하고 있습니다. 육군 사령관들은 개발 상황을 면밀히 주시하고 있지만, 라미레즈 대통령 임기 중 자신들의 몰락을 기억하면서, 절대적으로 필요한 시점까지는 개입할 용의가 없습니다."
