--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -514,14 +514,14 @@ BAT_ERP_End_desc:0 "Hurrah! Under our wise rule the Duchy has survived this cris
 BAT_Army_Start:0 "발트 군대"
 BAT_Army_Start_desc:0 "Officially, we do have an army. But it actually consists of nothing more than a bunch of young boys with rifles. Military doctrine is the first thing we need to modernise. Decades have passed since the end of the Weltkrieg and our current doctrine is now clearly outdated."
 
-BAT_Army_Cons:0 "Sons of Vaterland"
-BAT_Army_Cons_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. And we will rather die than allow them to do it. We are proud sons of Vaterland and our army must be a full German."
+BAT_Army_Cons:0 "조국의 자식들"
+BAT_Army_Cons_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. And we will rather die than allow them to do it. We are proud sons of Vaterland and our army must be entirely German."
 
-BAT_Army_Cons3:0 "All-Baltic Army"
-BAT_Army_Cons3_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. But now we need every man on the frontline, no matter who is he: German, Estonian, Latvian or Russian. The people of Baltic Duchy must defend their homes and there is no time for xenophobic bias."
+BAT_Army_Cons3:0 "전발트 육군"
+BAT_Army_Cons3_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. With the need for an ever-expanding standing force however, this must begin to change. While the core of the Army should remain German as there are some roles Balts simply cannot be trusted to fill, we need more men desperately and some reforms must be introduced."
 
-BAT_Army_Cons2:0 "Balts to Serve"
-BAT_Army_Cons2_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. Too many times Germans were used to fight, and too many of them have died on the battlefields. We should keep them away from service if we want a new generation of proud sons of the Vaterland."
+BAT_Army_Cons2:0 "발트인 징집"
+BAT_Army_Cons2_desc:0 "Native Balts, the majority of our country's population, are not currently allowed to serve in the army. But now we need every man on the frontline, no matter who is he: German, Estonian, Latvian or Russian. The people of the Baltic Duchy must defend their homes and there is no time for xenophobic bias."
 
 BAT_Army_Inf1:0 "현대 장비"
 BAT_Army_Inf1_desc:0 "Most of our troops use clearly obsolete equipment. The Weltkrieg is long over, we need to change our equipment so that our brave soldiers fight with the best money and technology has to offer. We are a militia no more!"
